# ProyectoSO

./: .gitignore  MetodoPago.cpp  README.md
proyecto/: AlmacenPropio.cpp  CMakeLists.txt  Cliente.cpp  Cliente.h  Efectivo.cpp  Efectivo.h  Empresa.cpp  Empresa.h  Fecha.cpp  Fecha.h  Main con hilos.cpp  Main.cpp  MetodoPago.cpp  MetodoPago.h  ProductoServicio.cpp  ProductoServicio.h  Solicitud.cpp  Solicitud.h  Tarjeta.cpp  Tarjeta.h  Transferencia.cpp  Transferencia.h  Transporte.cpp  Transporte.h  main.cpp  tempCodeRunnerFile.cpp
